# protobuf2what

./: .gitignore  Cargo.toml  buf.gen.yaml  buf.yaml  build.rs  debug.rs  readme.md  zod_commets_format.md
.github/workflows/: publish.yml
benches/: parser_benchmark.rs
files/: logdservice.proto  simple.proto  test_basic.proto  test_complex.proto  test_zod_validation.proto  with-zod-comments.proto
files/output/: logdservice.parsed.txt  logdservice.tokenized.txt
proto/plugin/: plugin.proto
src/: lib.rs  main.rs  plugin_proto.rs
src/buf/: mod.rs
src/generator/: mod.rs  zod_generator.rs
src/parser/: ast.rs  error.rs  lexer.rs  mod.rs  tests.rs
src/visitor/: mod.rs  visitor.rs
src/zod/: config.rs  generator.rs  metadata.rs  mod.rs  parser.rs  tests.rs  writer.rs
