[package]
name = "protobuf_to_zod"
version = "0.1.0"
edition = "2021"
authors = ["Protobuf to Zod Contributors"]
description = "Convert Protocol Buffer definitions to Zod schemas"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.22"
nom = "7.1.3"
criterion = "0.5"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
lazy_static = "1.4.0"
tempfile = "3.8.1"
atty = "0.2.14"


[[bench]]
name = "parser_benchmark"
harness = false
